assets/stylesheets/application.css
/* ... */
.field-dark .field-text:-ms-input-placeholder, .field-dark .field-textarea:-ms-input-placeholder {
    color: rgba(0, 0, 0, 0.2);
}

.field-dark .field-text:hover, .field-dark .field-textarea:hover {
    color: rgba(34, 36, 38, 0.7);
    border-color: rgba(34, 36, 38, 0.4);
}

.field-dark .field-text:focus, .field-dark .field-textarea:focus {
    border-color: #9559ce;
}

.field-with-label {
    padding-top: 16px;
}

.field-with-label input:focus + label, .field-with-label textarea:focus + label {
    color: #fff;
}

.field-with-label.field-dark input:focus + label, .field-with-label.field-dark textarea:focus + label {
    color: #9559ce;
}

.field-with-label.field-small .field-label {
    top: 6px;
}

.field-label {
    width: 100%;
    position: absolute;
    top: 10px;
    line-height: 12px;
    display: block;
    color: rgba(255, 255, 255, 0.7);
    font-size: 12px;
    font-weight: bold;
    margin-bottom: -1em;
}

.field-dark .field-label {
    color: rgba(34, 36, 38, 0.5);
}

.field-button {
    width: 100%;
    display: block;
    border-radius: 2px;
}

.field-date {
    position: fixed !important;
    top: 12px;
    right: 60px;
    text-align: right;
    z-index: 1040;
}

.field-date .field-label {
    display: inline-block;
    width: auto;
    position: relative;
    top: auto;
    left: auto;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: .05em;
    font-weight: bold;
    line-height: 1em;
    color: #fff;
}

.field-date .field-input {
    display: inline-block;
    text-align: center;
    width: 100px;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: .05em;
    font-weight: bold;
    line-height: 1em;
}

.field-slider {
    position: relative;
}

.field-slider .field-label {
    color: white;
    position: relative;
    margin-bottom: 0;
    top: 0;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: .05em;
    font-weight: bold;
    line-height: 1em;
}

.field-slider .ui-slider-horizontal {
    background: transparent;
    border: 2px solid #fff;
    height: 24px;
    margin-top: 12px;
    border-radius: 1000px;
}

.field-slider .ui-slider .ui-widget-header {
    background: rgba(255, 255, 255, 0.5);
    border-radius: 100px;
    cursor: -moz-grab;
    cursor: -webkit-grab;
    cursor: grab;
    height: 20px;
    border: none;
    position: absolute;
}

.field-slider .ui-slider .ui-widget-header:active {
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
    cursor: grabbing;
}

.field-slider .ui-slider-horizontal .ui-slider-handle {
    width: 24px;
    height: 24px;
    border: none;
    background: #fff;
    top: -2px;
    border-radius: 2px;
    box-shadow: 0 3px 4px rgba(34, 36, 38, 0.3);
    border-radius: 100px;
    margin-left: -22px;
    cursor: ew-resize;
    display: block;
    position: absolute;
}

.field-slider .ui-slider-horizontal .ui-slider-handle:first-of-type {
    margin: 0 -22px 0 -2px;
}

.figure {
    position: relative;
    display: block;
    background-size: cover;
}

.figure-16 {
    width: 16px;
}

.figure-24 {
    width: 24px;
}

.figure-36 {
    width: 36px;
}

.figure-48 {
    width: 48px;
}

.figure-60 {
    width: 60px;
}

.figure-image {
    display: block;
    width: 100%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
}

.figure-rounded {
    border-radius: 2px;
}

.figure-rounded .figure-image {
    border-radius: 2px;
}

.figure-zoom:hover {
    box-shadow: 0 0 0 2px white, 0 0 0 4px #9559ce;
}

.figure-avatar {
    position: relative;
    border-radius: 1000px !important;
}

.figure-avatar.null-bg {
    background: rgba(107, 120, 133, 0.5);
}

.figure-avatar .figure-image {
    border-radius: 1000px;
}

.figure-avatar .figure-caption {
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: .05em;
    font-weight: bold;
    line-height: 1em;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    color: #fff;
}

.figure-avatar-blank {
    border-radius: 1000px;
}

.figure-avatar-blank:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(34, 36, 38, 0.5);
    opacity: .5;
    border-radius: 1000px;
}

.figure-avatar-blank .image-spacer {
    border-radius: 1000px;
}

.figure-avatar-blank .image-spacer:before {
    border-radius: 1000px;
}

.figure-avatar-circle {
    position: relative;
    border-radius: 100%;
}

.figure-avatar-circle .figure-image {
    border-radius: 100%;
}

.figure-upload-avatar .button-image-upload {
    border: 1px dashed rgba(34, 36, 38, 0.2);
    border-radius: 2px;
    border-radius: 1000px;
}

.figure-upload-avatar .button-image-upload .icon-ss-camera {
    color: rgba(34, 36, 38, 0.2);
}

.figure-upload-avatar .button-spinner {
    border-left-color: rgba(34, 36, 38, 0.2);
    border-right-color: rgba(34, 36, 38, 0.2);
    border-bottom-color: rgba(34, 36, 38, 0.2);
    border-top-color: rgba(34, 36, 38, 0.5);
}

.figure-investor {
    text-align: center;
    display: inline-block;
    width: 136px;
    margin: 12px 24px;
    height: 250px;
    vertical-align: top;
}

.figure-investor .figure-image {
    margin-bottom: .5em;
    border-radius: 2px;
}

.figure-logo {
    display: inline-block;
    vertical-align: middle;
    opacity: .7;
}

.figure-logo .figure-image {
    display: inline-block;
    width: auto;
    max-width: 200px;
}

@media (max-width: 1200px) {
    .figure-logo .figure-image {
        max-width: 120px;
    }
}

.figure-devices {
    text-align: center;
}

.figure-devices .figure-image {
    display: inline-block;
    max-width: 500px;
}

.figure-gallery-about {
    padding: 1px;
}
/* ... */

